# ssd_course

./: .flake8  .flake8_nb  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  requirements.txt  setup.cfg
.github/workflow/: main.yml
.github/workflows/: main.yml
docs/source/: common.rst  conf.py  index.rst  modules.rst  numerical.rst  statistical.rst
src/: _test.py  common.py  input_output.py  notebook_unit1.ipynb  numerical.py  statistical.py
src/heipollo/: __init__.py  _test.py  input_output.py  numerical.py
