[metadata]
name = heipollo
version = 0.0.2
author = B.Gideon Bergheim and Paul Große-Bley
author_email = gideon.bergheim@cos.uni-heidelberg.de
description = SSC/SSD course module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pauleonix/ssd_course
project_urls =
    Bug Tracker = https://github.com/pauleonix/ssd_course/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
[options.packages.find]
where = src
install_requires = ["seaborn","numpy","matplotlib","pandas"]